Completely reworked (most of) the webdav logic